; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_lobject.c_luaO_hexavalue.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_lobject.c_luaO_hexavalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @luaO_hexavalue(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @lisdigit(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = sub nsw i32 %8, 48
  store i32 %9, i32* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call signext i8 @ltolower(i32 %11)
  %13 = sext i8 %12 to i32
  %14 = sub nsw i32 %13, 97
  %15 = add nsw i32 %14, 10
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %10, %7
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i64 @lisdigit(i32) #1

declare dso_local signext i8 @ltolower(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
